update-front-end

--- a/css/global/cores.css
+++ b/css/global/cores.css
@@ -1,7 +1,7 @@
 :root {
-  --cor-0: #6c001b;
+  --cor-0: #774f00;
   --cor-1: #9a1032;
-  --cor-2: #c23155;
+  --cor-2: #e0b23c;
   --cor-3: #f37896;
   --cor-4: #feb0c3;
   --cor-5: #fdebef;
