--- a/css/style.css
+++ b/css/style.css
@@ -9,7 +9,7 @@ table {
 
 body {
   height: 100vh;
-  background-color: var(--cor-5);
+  background-color: var(--cor-1);
   background-position: bottom -150px left -10px, bottom 200px left -200px,
     bottom 0px right 250px;
   background-repeat: no-repeat;
@@ -29,7 +29,7 @@ body {
 .identifier,
 .identifierR {
   color: var(--cor-a2);
-  background-color: var(--cor-1);
+  background-color: var(--cor-0);
   font-size: 12px;
   padding: 16px 8px;
 }
@@ -48,7 +48,7 @@ body {
   width: 150px;
   height: 100px;
   padding: 8px 16px;
-  background: linear-gradient(90deg, #9a1032 0%, #f37896 100%);
+  background: linear-gradient(90deg, var(--cor-0) 0%, var(--cor-2) 100%);
   border-radius: 0 12px 12px 12px;
   margin-bottom: 32px;
   z-index: -1;
@@ -61,11 +61,12 @@ body {
   width: 150px;
   height: 100px;
   padding: 8px 16px;
-  background: linear-gradient(90deg, #f37896 0%, #9a1032 100%);
+  background: linear-gradient(90deg, var(--cor-2) 0%, var(--cor-0) 100%);
   border-radius: 12px 0 12px 12px;
   margin-bottom: 32px;
   z-index: -1;
   font-size: 14px;
+  text-align: right;
 }
 
 .tag-sm {
@@ -74,7 +75,7 @@ body {
   width: 50px;
   height: 20px;
   padding: 8px 16px;
-  background: linear-gradient(90deg, #9a1032 0%, #f37896 100%);
+  background: linear-gradient(90deg, var(--cor-0) 0%, var(--cor-2) 100%);
   border-radius: 12px;
   margin-bottom: 32px;
   z-index: -1;
@@ -87,7 +88,7 @@ body {
   width: 50px;
   height: 20px;
   padding: 8px 16px;
-  background: linear-gradient(90deg, #9a1032 0%, #f37896 100%);
+  background: linear-gradient(90deg, var(--cor-0) 0%, var(--cor-2) 100%);
   border-radius: 12px;
   margin-bottom: 32px;
   z-index: -1;
@@ -95,13 +96,13 @@ body {
 }
 
 .img-trophy {
-  margin-top: -32px;
+  margin-top: -64px;
   box-sizing: border-box;
   display: flex;
   justify-content: center;
   position: absolute;
-  right: 40%;
-  height: 300px;
+  right: 35%;
+  height: 400px;
 }
 
 .container {
@@ -113,7 +114,11 @@ body {
   margin-right: auto;
   position: relative;
   display: grid;
-  margin-top: 32px;
+  margin-top: 64px;
+}
+
+.botao {
+  margin-top: -120px;
 }
 
 .botao::before {
@@ -132,5 +137,5 @@ body {
 }
 
 .botao-start:hover {
-  background-color: var(--cor-4);
+  background-color: var(--cor-2);
 }
